Set max width for bio images to prevent horizontal scrolling on certain screen widths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,6 +286,11 @@ footer {
     .intro {
         grid-column: span 3;
     }
+
+    .bio img {
+        max-width: 275px;
+        height: auto;
+    }
 }
 
 @media screen and (max-width: 750px) {
